style.css
/*
George Tiersma's Portfolio Website - CSS
*/

/*
Each section below is sorted alphabetically.
*/

/*

Notes:

- "opacity: 0.99" is commonly used in this document to bring an element to the front of the stacking order.

- Some properties are used twice for a given element: The first time with a "%" unit, the second with "vw" or "vh". This allows browsers that do not support "vw" or "vh" to fall back to "%".
*/

/*
----- GENERAL ELEMENT TYPES -----
*/

body
{
    margin: 0;
    overflow-x: hidden;
}

button
{
    /* COLOR */
    background-color: #FFF;
    border: 2px solid #060;
    color: #060;
    
    /* CURSOR */
    cursor: pointer;
    
    /* POSITION */
    text-align: center;
    
    /* SIZE */
    font-size: 18pt;
    height: 60px;
    width: 25%;
    width: 25vw;
}

circle
{
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
}

footer
{
    /* COLOR */
    background-color: #060;
    color: #FFF;
    
    /* POSITION */
    padding: 1% 0 1% 0;
    padding: 1vw 0 1vw 0;
    text-align: center;
}

h1
{
    position: relative;
    z-index: 1;
}

h2
{
    color: #030;
    display: inline-block;
}

h3
{
    font-size: 24pt;
}

h4
{
    margin: 1%;
    margin: 1vw;
}

h6
{
    position: relative;
}

html
{
    scroll-behavior: smooth;
}

p
{
    position: relative;
    z-index: 1;
}

/*
----- CLASSES -----
*/

/* The occupation text that is used when JavaScript is running */
.animatedOccupation
{
    /* ANIMATION */
    letter-spacing: 0;
    opacity: 0;
    transition: all 8s linear;
    -webkit-transition: all 3s linear;
}

/* The bulleted list of facts for each skill */
.bulleted
{
    list-style-type: square;
}

/* The div that animates when a textButton is hovered over by the cursor */
.buttonAnimation
{
    /* ANIMATION */
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
    
    /* COLOR */
    border: 0 solid #090;
    
    /* CURSOR */
    cursor: pointer;
    
    /* POSITION */
    position: absolute;
    top: 0;
    
    /* SIZE */
    height: 60px;
    width: 30%;
    width: 30vw;
}

/* The div that contains a textButton and its animated div */
.buttonContainer
{
    margin-bottom: 100px;
    position: relative;
    visibility: hidden;
}

/* The SVG graphic that is used to divide sections of the website */
.divider
{
    /* SIZE */
    height: 100%;
    height: 100vw;
    width: 100%;
    width: 100vw;
    
    /* POSITION */
    position: absolute;
    
    /* VISIBILITY */
    visibility: hidden;
}

/* Contains a section divider element */
.dividerContainer
{
    margin-bottom: -1%;
    margin-bottom: -1vh;
    position: relative;
}

/* Top title text */
.name
{
    /* FONT */
    font-size: 10%;
    font-size: 10vw;
    font-weight: 900;
    letter-spacing: -0.5;
}

/* The layer of the title text containing the animated lights */
.nameLayer2
{
    fill: url(#nameLights);
}

/* The layer of the title text containing the hexagons */
.nameLayer3
{
    fill: url(#hexagonPattern);
}

/* Arrow buttons for browsing through the projects */
.next, .previous
{
    cursor: pointer;
    height: 10%;
    height: 10vw;
    width: 10%;
    width: 10vw;
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
}

/* Elements that are only shown if JavaScript fails to execute */
.noJavaScript
{
    list-style-type: none;
}

/* Containers of data relating to a project that are shown if JavaScript fails to execute */
.noJavaScript .projectContent
{
    /* COLOR */
    opacity: 1.0;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    
    /* POSITION */
    margin-bottom: 1%;
    margin-bottom: 1vh;
    
    /* SIZE */
    height: auto;
}

/* The text below the title containing the occupation */
.occupation
{
    /* FONT */
    font-size: 24pt;
    font-weight: 1000;
    
    /* POSITION */
    margin-bottom: 15%;
    margin-bottom: 15vh;
    margin-top: 5%;
    margin-top: 5vw;
    position: relative;
    text-align: center;
}

/* Image of the project */
.previewImage
{
    /* ANIMATION */
    -webkit-transition: opacity 1s linear;
    transition: opacity 1s linear;
    
    /* BORDER */
    border-color: #060;
    border-style: solid;
    border-width: 5px;
    
    /* CURSOR */
    cursor: pointer;
    
    /* POSITION */
    display: inline-block;
    margin: 0 1% 0 1%;
    margin: 0 1vw 0 1vw;
    z-index: 15;
    
    /* SIZE */
    width: 50%;
    width: 50vw;
}

/* Button used to view/download a project */
.projectButton
{
    /* POSITION */
    left: 25%;
    left: 25vw;
    
    /* SIZE */
    width: 30%;
    width: 30vw;
}

/* Container of project elements that may be shown or hidden by the user */
.projectContent
{
    /* ANIMATION */
    height: 0;
    opacity: 0;
    -webkit-transition: all 1s linear;
    transition: all 1s linear;
    
    /* COLOR */
    background-color: #CCC;
    
    /* CORNERS */
    border-radius: 25px;
    
    /* POSITION */
    margin-left: auto;
    margin-right: auto;
    padding: 1%;
    padding: 1vw;
    text-align: center;
    
    /* SIZE */
    width: 80%;
    width: 80vw;
}

/* Container for a skill rating's graphic */
.ratingContainer
{
    /* POSITION */
    display: inline-block;
    float: right;
    margin-top: 5px;
    
    /* SIZE */
    height: 50px;
    width: 300px;
}

/* The button for viewing the resume */
.resumeButton
{
    /* POSITION */
    left: 35%;
    left: 35vw;
    
    /* SIZE */
    width: 30%;
    width: 30vw;
}

/* Lists of buttons to show or hide the content of projects or skills */
.showButtonList
{
    list-style-type: none;
    padding-bottom: 15%;
    padding-bottom: 15vh;
}

/* List item element belonging to each show/hide button */
.showButtonList li
{
    /* POSITION */
    margin: 5% 25px 0 0;
    margin: 5vh 25px 0 0;
    position: relative;
    z-index: 1;
}
/* ... */

